--- a/Visual-Sort/app/src/main/res/values/strings.xml
+++ b/Visual-Sort/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Visual Sort</string>
+    <string name="bubble_sort">Bubble Sort</string>
+    <string name="selection_sort">Selection Sort</string>
+    <string-array name="sorting_algorithms">
+        <item>Bubble Sort</item>
+        <item>Selection Sort</item>
+    </string-array>
 </resources>
