--- a/Visual-Sort/app/src/main/res/values/strings.xml
+++ b/Visual-Sort/app/src/main/res/values/strings.xml
@@ -1,7 +1,11 @@
 <resources>
     <string name="app_name">Visual Sort</string>
+
+    <string name="choose_algorithm_string">Choose algorithm</string>
+
     <string name="bubble_sort">Bubble Sort</string>
     <string name="selection_sort">Selection Sort</string>
+
     <string-array name="sorting_algorithms">
         <item>Bubble Sort</item>
         <item>Selection Sort</item>
